--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "native-base": "^2.13.4",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.4",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
     "reactotron-react-native": "^3.6.4",
     "reactotron-redux": "^3.1.1",
     "reactotron-redux-saga": "^4.2.2",
+    "realm": "^2.29.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.0.5",
     "reduxsauce": "^1.1.0",
