--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.4",
+    "react-native-bluetooth-serial": "^1.0.0-rc1",
     "react-native-gesture-handler": "^1.3.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
