--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "native-base": "^2.13.4",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
